# tenshi

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: check.rs  fetch.rs  main.rs  parse.rs  prompt.rs
