[package]
name = "tenshi"
version = "0.2.2"
authors = ["Jean Lucas <jean@4ray.co>"]
edition = "2018"
description = "Unbound local-zone generator for curated hosts files"
repository = "https://github.com/flacks/tenshi"
readme = "README.md"
keywords = ["unbound", "hosts", "adware", "malware"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
reqwest = "0.9.17"
regex = "1.1.6"
